--- a/templates/default/apache2.conf.erb
+++ b/templates/default/apache2.conf.erb
@@ -232,7 +232,7 @@ LogFormat "%{User-agent}i" agent
 
 
 # Include generic snippets of statements
-Include <%= node['apache']['dir'] %>/conf.d/*.conf
+Include <%= node['apache']['dir'] %>/conf.d/
 
 # Include the virtual host configurations:
 Include <%= node['apache']['dir'] %>/sites-enabled/
